C-Abi-Bridge-Aot/Tests/CAbiBridge.Aot.Cpp.Tests/bridge.h



//// Decimal (C# decimal → 128‑bit struct → hier als 16‑Byte Buffer)
//struct Decimal128 { std::uint8_t bytes[16]; };
//
//CABI_IMPORT Decimal128 next_crypto_decimal_aot(cerror_t* err);
//CABI_IMPORT Decimal128 next_crypto_decimal_max_aot(Decimal128 max, cerror_t* err);
//CABI_IMPORT Decimal128 next_crypto_decimal_min_max_aot(Decimal128 min, Decimal128 max, cerror_t* err);
//CABI_IMPORT cerror_t rng_crypto_decimal_aot(int size, void** out_ptr);
//CABI_IMPORT cerror_t rng_crypto_decimal_max_aot(int size, Decimal128 max, void** out_ptr);
//CABI_IMPORT cerror_t rng_crypto_decimal_min_max_aot(int size, Decimal128 min, Decimal128 max, void** out_ptr);

// ---------------------------------------------------------
// Convert Encoding
// ---------------------------------------------------------

CABI_IMPORT cerror_t to_base_64_utf8_aot(const uint8_t* data, int len, uint8_t** out_ptr, int* out_len);

CABI_IMPORT cerror_t from_base_64_utf8_aot(const uint8_t* data, int len, uint8_t** out_ptr, int* out_len);

CABI_IMPORT cerror_t to_hex_utf8_aot(const uint8_t* data, int len, uint8_t** out_ptr, int* out_len, bool lower);

CABI_IMPORT cerror_t from_hex_utf8_aot(const uint8_t* data, int len, uint8_t** out_ptr, int* out_len);


CABI_IMPORT cerror_t  converter_2_256_le_aot(const uint8_t* base_x_le, int base_x_length, int start_base, int target_base, uint8_t** output, int* output_length);

CABI_IMPORT cerror_t  to_base_x_2_256_le_aot(const uint8_t* bytes_base10_le, int bytes_length, int target_base, uint8_t** output, int* output_length);

CABI_IMPORT cerror_t  to_base_x_utf8_2_256_le_aot(const uint8_t* bytes_base10_utf8_le, int bytes_utf8_length, int target_base, uint8_t** output, int* output_length);

CABI_IMPORT cerror_t  from_base_x_2_256_le_aot(const uint8_t* bytes_basex_le, int bytes_length, int from_base_x, uint8_t** output, int* output_length);


CABI_IMPORT cerror_t pqc_mldsa_multi_sign_file_aot(
  const uint8_t* src_file_ptr, int src_file_length,

  uint8_t** guid_ptr, int* guid_length, int guid_count,
  uint8_t** sign_ptr, int* sign_length, int sign_count,
  uint8_t** public_key_ptr, int* public_key_length, int public_key_count,
  uint8_t** signer_name_ptr, int* signer_name_length, int signer_name_count,
  uint8_t** project_name_ptr, int* project_name_length, int project_name_count,

  const uint8_t* sign_algo_ptr, int sign_algo_count,
  const uint8_t* mldsa_param_ptr, int mldsa_param_count,

  uint8_t** multi_sign_ptr, int* multi_sign_length,
  uint8_t** multi_private_key_ptr, int* multi_private_key_length,
  uint8_t** multi_public_key_ptr, int* multi_public_key_length);