C-Abi-Bridge-Aot/Tests/CAbiBridgeAot.Tests/Native.cs


  [LibraryImport(DllName, EntryPoint = "pqc_mldsa_multi_sign_file_aot")]
  internal static unsafe partial CError PqcMlDsaMultiSignFileAot(
      byte* src_file_ptr, int src_file_length,

      byte** guid_ptr, int* guid_length, int guid_count,
      byte** sign_ptr, int* sign_length, int sign_count,
      byte** public_key_ptr, int* public_key_length, int public_key_count,
      byte** signer_name_ptr, int* signer_name_length, int signer_name_count,
      byte** project_name_ptr, int* project_name_length, int project_name_count,

      byte* sign_algo_ptr, int sign_algo_count,
      byte* mldsa_param_ptr, int mldsa_param_count,

      out IntPtr multi_sign_ptr, out int multi_sign_length,
      out IntPtr multi_private_key_ptr, out int multi_private_key_length,
      out IntPtr multi_public_key_ptr, out int multi_public_key_length);

  #endregion Crypto PQC Multi Signatur ML-DSA

  #endregion Crypto PQC Signatur ML-DSA

  #region Crypto PQC Signatur SLH-DSA

  #region Crypto PQC Signatur SLH-DSA Bytes

  //stuff

  #endregion Crypto PQC Signatur SLH-DSA Bytes

  #region Crypto PQC Signatur SLH-DSA Files

  //stuff

  #endregion Crypto PQC Signatur SLH-DSA Files

  #endregion Crypto PQC Signatur SLH-DSA

  #endregion Crypto PQC Signatur Stateless

  #endregion Crypto PQC Signatur

  #endregion Crypto PQC

  #region Convert - Encoding

  #region Base64

  [LibraryImport(DllName, EntryPoint = "to_base_64_utf8_aot")]
  internal static partial CError ToBase64Aot(
    ReadOnlySpan<byte> bytes, int bytes_length,
    out IntPtr output, out int output_length);

  [LibraryImport(DllName, EntryPoint = "from_base_64_utf8_aot")]
  public static partial CError FromBase64Aot(
    ReadOnlySpan<byte> bytes, int bytes_length,
    out IntPtr output, out int output_length);

  #endregion Base64

  #region Hex

  [LibraryImport(DllName, EntryPoint = "to_hex_utf8_aot")]
  internal static partial CError ToHexAot(
    ReadOnlySpan<byte> bytes, int bytes_length,
    out IntPtr output, out int output_length,
    [MarshalAs(UnmanagedType.U1)] bool lower = true);

  [LibraryImport(DllName, EntryPoint = "from_hex_utf8_aot")]
  public static partial CError FromHexAot(
    ReadOnlySpan<byte> bytes, int bytes_length,
    out IntPtr output, out int output_length);

  #endregion Hex

  #region BaseX

  [LibraryImport(DllName, EntryPoint = "converter_2_256_le_aot")]
  internal static partial CError Converter_2_256_LE_Aot(
    ReadOnlySpan<byte> base_x_le, int base_x_length,
    int start_base, int target_base,
    out IntPtr output, out int output_length);

  [LibraryImport(DllName, EntryPoint = "to_base_x_2_256_le_aot")]
  internal static partial CError ToBaseX_2_256_LE_Aot(
    ReadOnlySpan<byte> bytes_base10_le, int bytes_length, int target_base,
    out IntPtr output, out int output_length);

  [LibraryImport(DllName, EntryPoint = "to_base_x_utf8_2_256_le_aot")]
  internal static partial CError ToBaseXUtf8_2_256_LE_Aot(
    ReadOnlySpan<byte> bytes_base10_utf8_le, int bytes_utf8_length, int target_base,
    out IntPtr output, out int output_length);

  [LibraryImport(DllName, EntryPoint = "from_base_x_2_256_le_aot")]
  internal static partial CError FromBaseX_2_256_LE_Aot(
    ReadOnlySpan<byte> bytes_basex_le, int bytes_length, int from_base_x,
    out IntPtr output, out int output_length);

  #endregion BaseX

  #endregion Convert - Encoding

  #region Compress


  #endregion Compress

  #region Serialize


  #endregion Serialize
}
